# ai_tutor

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/chat_framework/: MainActivity.kt
chat_api/: main.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/api/: README.md  chat_api.dart
lib/components/: chat_bubble.dart  link_preview_card.dart  message_input.dart  quiz_widget.dart
lib/models/: link_metadata.dart  message.dart  quiz.dart
lib/providers/: theme_provider.dart
lib/routes/: app_router.dart
lib/screens/: aachat_screen.dart  chat_screen.dart
lib/themes/: app_theme.dart
lib/utils/: link_parser.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
static/: index.html
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
